fixed iframe on Safari

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -123,6 +123,10 @@ body {
   background-color: #1a2a3f;
   color: #efebe5;
 
+  iframe {
+    visibility: none;
+    opacity:0;
+  }
   h1, h2 {
     display: none;
   }
